[gd_scene load_steps=18 format=3 uid="uid://b7cgghr4mk2pa"]

[ext_resource type="Script" path="res://data/nodes/damage_target.gd" id="1_a244l"]
[ext_resource type="Texture2D" uid="uid://7h7ujfkn4cf1" path="res://data/sprites/heart-01.png" id="1_ckgt5"]
[ext_resource type="Script" path="res://data/scenes/dungeon_heart.gd" id="1_odn4d"]
[ext_resource type="Texture2D" uid="uid://cm4pufp573q80" path="res://data/sprites/heart-02.png" id="2_avh0e"]
[ext_resource type="Material" uid="uid://caabkyh33pd4j" path="res://data/shader/NokiaMaterial.tres" id="4_od2jv"]
[ext_resource type="Script" path="res://data/nodes/health.gd" id="4_og07a"]
[ext_resource type="Script" path="res://data/scenes/FogOfWarRemover.gd" id="8_82ya3"]
[ext_resource type="Material" uid="uid://yudv6e212hb6" path="res://data/shader/NokiaMaterial_Inverted.tres" id="8_r4edx"]
[ext_resource type="Script" path="res://data/scenes/Spawner.gd" id="9_tyk56"]
[ext_resource type="PackedScene" uid="uid://cb0mhr55ehsbc" path="res://data/scenes/imp.tscn" id="10_gjbfr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ql1n6"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_v0nbm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/invert")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_od2jv")]
}

[sub_resource type="Animation" id="Animation_2vhit"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_od2jv"), ExtResource("8_r4edx"), ExtResource("4_od2jv"), ExtResource("8_r4edx"), ExtResource("4_od2jv")]
}

[sub_resource type="Animation" id="Animation_woock"]
resource_name = "heart_beat"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 1.7, 2.2, 2.5, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_ckgt5"), ExtResource("2_avh0e"), ExtResource("1_ckgt5"), ExtResource("2_avh0e"), ExtResource("1_ckgt5"), ExtResource("1_ckgt5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m8qeo"]
_data = {
"RESET": SubResource("Animation_v0nbm"),
"damaged": SubResource("Animation_2vhit"),
"heart_beat": SubResource("Animation_woock")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1j4qc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl5cm"]
size = Vector2(8, 8)

[node name="DungeonHeart" type="Node2D"]
script = ExtResource("1_odn4d")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("4_od2jv")
texture = ExtResource("1_ckgt5")

[node name="DamageTarget2D" type="Area2D" parent="." groups=["DamageTarget"]]
script = ExtResource("1_a244l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageTarget2D"]
shape = SubResource("RectangleShape2D_ql1n6")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_og07a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_m8qeo"),
"Animations": SubResource("AnimationLibrary_1j4qc")
}
autoplay = "heart_beat"

[node name="FogOfWarRemover" type="Node2D" parent="."]
script = ExtResource("8_82ya3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gl5cm")

[node name="Spawner" type="Node" parent="." node_paths=PackedStringArray("spawn_location")]
script = ExtResource("9_tyk56")
spawn_location = NodePath("../SpawnLocation")
spawn_prefab = ExtResource("10_gjbfr")

[node name="SpawnLocation" type="Marker2D" parent="."]
position = Vector2(0, -8)

[connection signal="damaged" from="DamageTarget2D" to="." method="_on_damage_target_2d_damaged"]
[connection signal="damaged" from="DamageTarget2D" to="Health" method="decrement_health"]
[connection signal="died" from="Health" to="." method="die"]
[connection signal="spawn_callback" from="Spawner" to="." method="_on_spawner_spawn_callback"]
